Mon Oct 29 18:42:17 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (bvar): block-local variable can shadow outer variable.
	  [ruby-core:13036]

Mon Oct 29 17:58:16 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_substr): perfomance improvement.  [ruby-dev:31806]

Mon Oct 29 17:20:13 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_replicate): new function to replicate encoding.

	* encoding.c (enc_based_encoding): Encoding#base_encoding returns
	  based encoding of replica.

Mon Oct 29 17:18:36 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_compatible): ASCII encoding is compatible with
	  ASCII-compatible encoding, even for non-string objects.

Sun Oct 28 21:50:02 2007  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb: :redirect option implemented to disable redirects.
	  (OpenURI::HTTPRedirect): new exception class for redirection.

Fri Oct 26 17:38:13 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (int_chr): take an optional encoding parameter.
	  [ruby-core:12816]

Fri Oct 26 17:14:14 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (fix_pow): returns 1.0 for 0**0.0.

	* numeric.c (fix_pow): returns infinity for 0**-1.  [ruby-dev:32084]

Fri Oct 26 15:00:52 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-style.el (ruby-style-{case,label}-indent): adjust for
	  labels inside switch block.

Fri Oct 26 05:48:57 UTC 2007  David Flanagan <davidflanagan@ruby-lang.org>
	* array.c: raise IndexError for negative length in rb_ary_fill
	
Wed Oct 25 07:12:03 2007  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/net/telnet.rb (Net::Telnet#login): Allowing "passphrase" in
	  addition to "password" for Telnet login prompts. [ruby-Bugs-10746]

Wed Oct 25 06:34:11 2007  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/net/telnet.rb (Net::Telnet#login): Making the password prompt
	  pattern case insensitive. [ruby-Bugs-10746]
